--- a/Play.ipynb
+++ b/Play.ipynb
@@ -20,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install matplotlib\n",
     "%matplotlib inline\n",
     "from ipywidgets import interactive, fixed"
    ]
